Docs: add new items, write appendix

--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -7,7 +7,7 @@ description: ''
 
 By minimalistic, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components (there will be components but we will manage them under Spruce UI) in it.
 
-<Notification type="info">Please, note that Spruce is in beta until the 1.0 release. At this point, we are sure of just a few things. Hopefully, in the next 6-8 months, we can release the major first version. Thank you!</Notification>
+<Notification type="info">Please, note that Spruce is in beta until the 1.0 release. At this point, a lot of thing could and will change. Hopefully, in the next 3-6 months, we can release the major first version. Also, the documentation is WIP. Thank you!</Notification>
 
 ## Why Make Another CSS Framework
 
@@ -41,4 +41,4 @@ One deficit in this CSS framework is the grid system. Because of the late CSS la
 
 ## Color Purple
 
-Choosing a “brand” color is hard because all of them are taken. After we realized that all of our stuff uses blue, we made the boldest choice and picked purple. We swear we didn't copy the color from Boostrap, unlike many other things. :|
+Choosing a “brand” color is hard because all of them are taken. After we realized that all of our stuff uses blue, we made the boldest choice and picked purple. We swear we didn't copy the color from Boostrap, unlike many other things. 😐
