--- a/src/docs/getting-started/appendix.mdx
+++ b/src/docs/getting-started/appendix.mdx
@@ -2,5 +2,10 @@
 title: 'Appendix'
 ---
 
-- https://web.dev/patterns/layout/
-- https://web.dev/learn/design/
+<p class="lead">In the appendix you can find some reference that inspired or gave any kind of input related to any aspects of Spruce</p>
+
+Creating a framework is a complex task, you need a lot of input. You usually don't invent the wheel, you use the old ideas in a new form. So here is a lot of good resource if you want to know more, it helped a lot for us.
+
+- [Bootstrap](https://getbootstrap.com/) - It may look strange that we reference Bootstrap here because it a (maybe the biggest) competition of Spruce. The case is, that BS is almost the ultimate truth when it comes to excellent solutions. It a a high standard for us and a great knowledge of us.
+- [Layout patterns](https://web.dev/patterns/layout/) - A good source of modern layout examples. Spruce don't use a grid system and it we don't plan to implement one. We use Flexbox and Grid.
+- [Learn Responsive Desig](https://web.dev/learn/design/) - A great resource for modern responsive development. We loved the "Internationalization" section.
