Docs: add YouTube embed handling, i18n

--- a/src/docs/getting-started/internationalization.mdx
+++ b/src/docs/getting-started/internationalization.mdx
@@ -2,4 +2,16 @@
 title: 'Internationalization'
 ---
 
-<p class="lead">In the appendix you can find some reference that inspired or gave any kind of input related to any aspects of Spruce</p>
+<p class="lead">Internationalization (i18n) means to prepare you code, design to handle different languages and writing modes.</p>
+
+The simplest example is the right-to-left (RTL) writing mode which used by Arabic, Hebrew languages among others. When you write RTL you should mirror (simplified explanation!) your site: your logo in the header move to the right side and all of your layout, text alignment also changes place in a similar manner.
+
+[Click on this button, to temporarly switch Spruce's site text directon to RTL.]
+
+For more information checkout this cool video from Moriel Chottlender hoseted by Jason Lengstorf:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/OHF2h1_fBCM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+## Logical Properties
+
+
