--- a/src/docs/getting-started/accessibility.mdx
+++ b/src/docs/getting-started/accessibility.mdx
@@ -2,11 +2,11 @@
 title: 'Inclusivity and Accessibility'
 ---
 
-<p class="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce. Our goal is to help you develop a little more accessible web-based projects through our code and the documentation, where we will try to show you small, related tips.</p>
+<p class="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce. Our goal is to help you develop a little more accessible web-based projects through our code and the documentation, where we will try to show you small, related tips and guidence where it is possible.</p>
 
 ## WCAG 2.1
 
-Our primary reference is the [Web Content Accessibility Guidelines 2.1](https://www.w3.org/WAI/WCAG21/quickref/) level AA. By alone, as a base framework, Spruce can’t tackle too much of this reference, but we will follow this standard in Spruce UI too. 
+Our primary reference is the [Web Content Accessibility Guidelines 2.1](https://www.w3.org/WAI/WCAG21/quickref/) level AA. By alone, as a CSS framework, Spruce can’t tackle too much of this reference, but we will follow this standard in Spruce UI too, where it will have more significance.
 
 ## Integrated Inclusivity
 
@@ -14,3 +14,4 @@ We will meet the following accessibility-related issues:
 
 - The base colors and the base combinations will complete the color contrast guides.
 - We respect the user settings through ```prefers-reduced-motion``` and ```prefers-color-scheme```.
+- We care about semantic and will try present the code, examples in a more meaningful way.
