--- a/src/docs/elements/buttons.mdx
+++ b/src/docs/elements/buttons.mdx
@@ -148,7 +148,7 @@ You can create new button color variants using the ```btn-variant``` mixin. Firs
 
 ```scss
 // You have to specify the additional colors at the very first import of Spruce.
-@use 'spruce/scss/spruce' with (
+@use 'sprucecss/scss/spruce' with (
   $colors: (
     btn: (
       ternary-background: hsl(247, 65%, 49%),
