Update Installation content

--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -3,42 +3,38 @@ title: 'Introduction'
 description: ''
 ---
 
-<p className="lead">Spruce is a Sass-based CSS design system, a minimalistic framework that helps us get our foundation right and manage multiple projects better.</p>
+<p className="lead">Spruce is a Sass-based CSS design system, a minimalistic framework that helps us get the foundation right and better manage multiple projects.</p>
 
-By minimalistic, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components (there will be components but we will manage them under Spruce UI) in it.
+By minimalistic, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components (there will be components, but we will manage them under Spruce UI, under a sister project) in it. Although it seems small, it isn’t.
 
-<Notification type="info">Please, note that Spruce is in beta until the 1.0 release. At this point, a lot of thing could and will change. Hopefully, in the next 3-6 months, we can release the major first version. Also, the documentation is WIP. Thank you!</Notification>
+<Notification type="info">Please, note that we are considering Spruce beta until the 1.0 release. At this point, a lot of things could and will change. Hopefully, in the next 3-6 months, we can release the major first version.</Notification>
 
-## Why Make Another CSS Framework
+## Why Make Another CSS Framework?
 
-As you may know, there are a great many CSS frameworks. Everybody can choose one that suits well their work of style or project requirements. So why make another one? It is certainly not because we can do it better but because we want to do it our own way.
+As you may know, there are a great many CSS frameworks. Everybody can choose one that suits their work of style or project requirements well. So why make another one? It is certainly not because we can do it better but because we want to do it our way.
 
-We are sure everybody uses a CSS system, be it a complete framework or a set of utilities. Everyone uses some subset for the new projects as we do. But managing it is something that will be a burden after a time. So why not outsource it, make it better, and use it through npm?
+We are sure everybody uses a CSS system; it can be a complete framework or a set of custom utilities. Everyone uses some subset for the new projects as we do. But managing it is something that will be a burden after a time. So why not outsource it, make it better, and create a package?
 
-## What Spruce Wants to Be
+## What Spruce Wants to Be?
 
-- It wants to be a  little bit better with each release.
-- It wants to be minimalistic and small, with just the basic necessities for any project.
-- It is trying to be modern. Defining modern is challenging in a constantly changing environment, but the essence here is to follow the new things in CSS.
-- It tries to separate the basic framework from a UI or component library. For UI, we plan to do a separate project named Spruce UI.
-- It tries to be semantic and follow accessibility best practices.
-- It tries to do less (we will see that it actually happens).
+- It wants to be a little bit better with each release.
+- It wants to be minimalistic and small, with just the essential necessities for any project.
+- It wants to be modern. Defining modern is challenging in a constantly changing environment, but the essence here is to follow the new things in CSS.
+- It wants to separate the basic framework from a UI or component library. For UI, we plan to do a separate project named Spruce UI.
+- It wants to be semantic and follow accessibility best practices where possible.
+- It wants to do less (we will see that it actually happens).
 
 ## What Spruce Don’t Wants to Be?
 
 - We don’t want to compete or compered with other CSS frameworks. We think almost all of them are great - we learn(ed) a lot from them.
-- Although it has some design opinion, it is not something to help you design. The goal is to give you the correct patterns and a small system.
-- Spruce is just a tool. It can make your decisions, and alone it can’t make your code better.
+- Although it has some design opinion, it is not something to help you design. The goal is to give you the correct patterns and a small system; the UI is your job.
+- Spruce is just a tool. It can help you, but alone it can’t make your code better. You have to do your homework.
 
-## It Is Not Just About the CSS Code but About the Point of View
-
+## Sure, It Is Opinionated 
 Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for any particular solution (because there are always more than one), but we will show you what we think is the best right now (for us for sure). We don’t believe there is a good or bad solution, but we can learn from any of them.
 
-## Can Left the Grid Out
-
-One deficit in this CSS framework is the grid system. Because of the late CSS layout model developments like Flexbox and Grid, we think that it can be eliminated; this doesn’t mean that we won’t show you how to make fantastic layouts with ease, but we try to make it in a modernish way.
-
+## We Left the Grid Out
+One deficit in Spruce CSS is the lack of a classical grid system. Because of the late CSS layout model developments like Flexbox and Grid, we think that it can be eliminated; this doesn’t mean that we won’t show you how to make layouts with ease, but we try to make it in a modernish way.
 
 ## Color Purple
-
-Choosing a “brand” color is hard because all of them are taken. After we realized that all of our stuff uses blue, we made the boldest choice and picked purple. We swear we didn't copy the color from Boostrap, unlike many other things. 😐
+Choosing a “brand” color is hard because all of them are taken. After we realized that all of our stuff uses blue, we made the boldest choice and picked purple. We swear we didn’t copy the color from Boostrap, unlike many other things. 😐
