Use Spruce from package

--- a/src/docs/getting-started/installation.mdx
+++ b/src/docs/getting-started/installation.mdx
@@ -2,16 +2,16 @@
 title: 'Installation'
 ---
 
-<p className="lead">To harvest the full potential of Spruce, you should use it through Sass, but if you want, you can load the compiled CSS too.</p>
+<p className="lead">Spruce CSS is built on Sass; to get the full potential, you should use with it. If you want, you can load the compiled CSS too, but you will lose many features.</p>
 
 ## Install with NPM
 
 ```
-npm install spruce.css --save
+npm install sprucecss --save
 ```
 
 ## Install with Yarn
 
 ```
-yarn add spruce.css
+yarn add sprucecss
 ```
