--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -7,7 +7,7 @@ description: ''
 
 By minimalistic, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components (there will be components, but we will manage them under Spruce UI, under a sister project) in it. Although it seems small, it isn’t.
 
-<Notification type="info">Please, note that we are considering Spruce beta until the 1.0 release. At this point, a lot of things could and will change. Hopefully, in the next 3-6 months, we can release the major first version.</Notification>
+<Notification type="info">Please, note that we are considering Spruce beta until the 1.0 release. At this point, a lot of things could and will change. We plan to release the first major version in the next 3-6 months.</Notification>
 
 ## Why Make Another CSS Framework?
 
