--- a/src/docs/getting-started/structure-and-code.mdx
+++ b/src/docs/getting-started/structure-and-code.mdx
@@ -8,3 +8,5 @@ title: 'Structure and Code'
 - We use Stylelint... [more]
 - We use mostly BEM when a more complicated structure is necessary.
 - We try not to use px as units. Right now, it is only present at border values.
+
+## Browser Support
