Update Structure and Code content

--- a/src/docs/getting-started/structure-and-code.mdx
+++ b/src/docs/getting-started/structure-and-code.mdx
@@ -2,11 +2,52 @@
 title: 'Structure and Code'
 ---
 
-## Coding Style Guide
+<p class="lead">Spruce tries to be customizable and straightforward. On this page, you can find some core principles and the structure.</p>
 
-- Where it is possible, we use attributes to style elements, but it is still a class-based framework.
-- We use Stylelint... [more]
+## Coding Style Guide and Practices
+
+- Where it is possible, we use elements and/or attributes to style elements, but it is still a class-based framework.
+- We use Stylelint with a [modified configuration](https://github.com/conedevelopment/sprucecss/blob/main/.stylelintrc.json) with [stylelint-config-sass-guidelines](https://www.npmjs.com/package/stylelint-config-sass-guidelines) preset to quality control.
+- We alphabetize the property declaration order. It is practical, no joke.
 - We use mostly BEM when a more complicated structure is necessary.
 - We try not to use px as units. Right now, it is only present at border values.
 
+## Developing with Spruce
+
+Spruce uses npm scripts to compile Sass and to do other tasks. You can see all of the scripts in the [package.json file](https://github.com/conedevelopment/sprucecss/blob/main/package.json).
+
+**Our two main scripts are:**
+
+- ```npm run dev``` is for development purposes. It will fire up the development preview, a pug-based, simple HTML page where you can see all the styled elements.
+- ```npm run prod``` is for production. It will create the right compiled CSS files.
+
+## The Structure of the Project
+
+You can find the main code under the ```scss``` folder at the root. The ```.vscode``` folder contains a VS Code configuration file. The ```preview``` folder is a developer helper where we can see the effect of the modification right away.
+
+```scss
+sprucecss/
+├─ .vscode/
+├─ css/               // Compiled CSS folder
+│  ├─ spruce.css
+│  ├─ spruce.min.css
+├─ preview/           // Spruce preview for development
+│  ├─ ...
+├─ scss/              // Source .scss files, Spruce CSS itself
+│  ├─ form/
+│  ├─ function/
+│  ├─ mixin/
+│  ├─ variable/
+│  ├─ ...
+│  ├─ spruce.scss
+├─ .gitignore
+├─ package.json
+├─ README.md
+├─ ...
+```
+
 ## Browser Support
+
+Spruce uses [Autoprefixer](https://github.com/postcss/autoprefixer) with the [default configurations](https://github.com/browserslist/browserslist#best-practices).
+
+The browser support is not set in stone, but one of the goals of this framework is to be a modern one. We will plan to support new features early, but we understand the browser landscape is not so simple. Please [open an issue](https://github.com/conedevelopment/sprucecss/issues/new) if you have any questions or ideas regarding this topic.
