Update Contribution content

--- a/src/docs/getting-started/contribution.mdx
+++ b/src/docs/getting-started/contribution.mdx
@@ -41,4 +41,4 @@ In short, when you submit code changes, your submissions are understood to be un
 
 ## Use a Consistent Coding Style
 
-[... stylelint etc]
+Please follow and use the practices under the [Structure and Code section](http://localhost:8000/docs/getting-started/structure-and-code#coding-style-guide-and-practices).
