Start with Sass variables, mixins, functions content

--- a/src/docs/getting-started/sass.mdx
+++ b/src/docs/getting-started/sass.mdx
@@ -6,7 +6,7 @@ title: 'Sass'
 
 ## Is Sass Needed to Use Spruce?
 
-Yes, it is. Spruce uses few utility classes. It uses mixins, functions, and variables (both Sass and CSS custom properties) to give a better development experience.
+Yes, it is. Spruce uses few utility classes. It uses [mixins](http://localhost:8000/docs/sass/mimxins), [functions](http://localhost:8000/docs/sass/functions), and [variables](http://localhost:8000/docs/sass/variables) (both Sass and CSS custom properties) to give a better development experience.
 
 ## Why Use Sass?
 
