--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -22,7 +22,7 @@ $breakpoints: (
 
 ### Argument(s)
 
-| Name              | Default&nbsp;Value | Description                                                                                   |
+| Name              | Default Value | Description                                                                                   |
 |-------------------|--------------------|-----------------------------------------------------------------------------------------------|
 | ```$breakpoint``` |                    | The name of the key from the ```$breakpoints``` map.                                          |
 | ```$logic```      | ```false```        | Any custom logic next to the ```min-width``` value connected with the “and” logical operator. |
@@ -61,7 +61,7 @@ Using the ```btn-variant``` mixin, you can create a new button variant. First, y
 
 ### Argument(s)
 
-| Name              | Default&nbsp;Value       | Description                                 |
+| Name              | Default Value       | Description                                 |
 |-------------------|--------------------------|---------------------------------------------|
 | ```$foreground``` | ```primary-foreground``` | The value of the button's foreground color. |
 | ```$background``` | ```primary-background``` | The value of the button's background color. |
@@ -100,7 +100,7 @@ With the help of the ```layout-center``` mixin, you can center any element.  It 
 
 ### Argument(s)
 
-| Name             | Default&nbsp;Value            | Description                                                                             |
+| Name             | Default Value            | Description                                                                             |
 |------------------|-------------------------------|-----------------------------------------------------------------------------------------|
 | ```$gutter```    | ```spruce.spacer(m)```        | The padding value on either side of the element. The value comes from the $spacers map. |
 | ```$max-width``` | ```spruce.$container-width``` | Set the max-width value of the element.                                                 |
