--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -23,9 +23,9 @@ $breakpoints: (
 ### Argument(s)
 
 | Name              | Default Value | Description                                                                                   |
-|-------------------|--------------------|-----------------------------------------------------------------------------------------------|
-| ```$breakpoint``` |                    | The name of the key from the ```$breakpoints``` map.                                          |
-| ```$logic```      | ```false```        | Any custom logic next to the ```min-width``` value connected with the “and” logical operator. |
+|-------------------|---------------|-----------------------------------------------------------------------------------------------|
+| ```$breakpoint``` |               | The name of the key from the ```$breakpoints``` map.                                          |
+| ```$logic```      | ```false```   | Any custom logic next to the ```min-width``` value connected with the “and” logical operator. |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_breakpoint.scss)
 
@@ -102,7 +102,7 @@ With the help of the ```layout-center``` mixin, you can center any element.  It 
 
 | Name             | Default Value            | Description                                                                             |
 |------------------|-------------------------------|-----------------------------------------------------------------------------------------|
-| ```$gutter```    | ```spruce.spacer(m)```        | The padding value on either side of the element. The value comes from the $spacers map. |
+| ```$gutter```    | ```spruce.spacer(m)```        | The padding value on either side of the element. The value comes from the ```$spacers``` map. |
 | ```$max-width``` | ```spruce.$container-width``` | Set the max-width value of the element.                                                 |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_layout.scss#L6)
@@ -123,25 +123,85 @@ Using the help of the ```layout-stack``` mixin, you can classical stack layout w
 
 ### Argument(s)
 
-| Name             | Default Value            | Description                                                                             |
-|------------------|-------------------------------|-----------------------------------------------------------------------------------------|
-| ```$gutter```    | ```function.spacer(m)```        | The margin value on either side of the element. The value comes from the $spacers map. |
-| ```$width``` | ```true``` | Set the max-width value of the element.                                                 |
-| ```$align``` | ```none``` | Set the max-width value of the element.                      |
-| ```$split``` | ```0``` | Set the max-width value of the element.                      |
+| Name          | Default Value            | Description                                                                         |
+|---------------|--------------------------|-------------------------------------------------------------------------------------|
+| ```$gutter``` | ```function.spacer(m)``` | The margin value between the elements. The value comes from the ```$spacers``` map. |
+| ```$width```  | ```true```               | Set ```width: 100%;``` on the stacked elements.                                     |
+| ```$align```  | ```none```               | Set explicit align to the elements(```none```, ```left```, ```right```).            |
+| ```$split```  | ```0```                  | Split the elements vertically from the nth element.                                 |
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_layout.scss#L12)
 
 ### Example(s)
 
 ```scss
-fieldset {
-  @include mixin.layout-stack(function.spacer(s));
+ul {
+  @include spruce.layout-stack(spruce.spacer(xs));
 }
 ```
 
-@mixin layout-stack(
-  $gutter: function.spacer(m),
-  $width: true,
-  $align: none,
-  $split: 0
-) {
+## layout-grid
+
+With the help of the ```layout-grid``` mixin you can create auto-fit grid layouts where you can determine the columns' min-width.
+
+### Argument(s)
+
+| Name           | Default Value          | Description                                                                         |
+|----------------|------------------------|-------------------------------------------------------------------------------------|
+| ```$gutter```  | ```spruce.spacer(m)``` | The gutter value between the elements. The value comes from the ```$spacers``` map. |
+| ```$minimum``` | ```12.5rem```          | The minimum value of the child elements where it automatically breaks.              |
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_layout.scss#L56)
+
+### Example(s)
+
+```scss
+.docs-cards {
+  &__inner {
+    @include spruce.layout-grid(spruce.spacer(l), 20rem);
+  }
+}
+```
+
+## layout-sidebar
+
+Using the ```layout-sidebar``` mixin, you can create a two-column sidebar layout declaring the sidebar width explicitly.
+
+### Argument(s)
+
+| Name                 | Default Value          | Description                                                                         |
+|----------------------|------------------------|-------------------------------------------------------------------------------------|
+| ```$gutter```        | ```spruce.spacer(m)``` | The gutter value between the elements. The value comes from the ```$spacers``` map. |
+| ```$sidebar-width``` | ```18.75rem```         | The width of the sidebar element.                                                   |
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_layout.scss#L71)
+
+### Example(s)
+
+```scss
+.docs-template {
+  @include spruce.layout-sidebar(spruce.spacer(l), 22rem);
+}
+```
+
+## layout-flex
+
+Using the ```layout-flex``` mixin, you can create intrinsic flexbox grids with explicit column width.
+
+### Argument(s)
+
+| Name                  | Default Value          | Description                                                                         |
+|-----------------------|------------------------|-------------------------------------------------------------------------------------|
+| ```$gutter```         | ```spruce.spacer(m)``` | The gutter value between the elements. The value comes from the ```$spacers``` map. |
+| ```$width-variable``` | ```--col-width```      | The optimal width of the columns.                                                   |
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_layout.scss#L91)
+
+### Example(s)
+
+```scss
+.form-row--mixed {
+  --col-width: 10rem;
+
+  @include spruce.layout-flex;
+}
+```
