Update a11y and Sass content

--- a/src/docs/getting-started/accessibility.mdx
+++ b/src/docs/getting-started/accessibility.mdx
@@ -13,5 +13,5 @@ Our primary reference is the [Web Content Accessibility Guidelines 2.1](https://
 We will meet the following accessibility-related issues:
 
 - The base colors and the base combinations will complete the color contrast guides.
-- We respect the user settings through ```prefers-reduced-motion``` and ```prefers-color-scheme```.
+- We respect the user settings through ```prefers-reduced-motion``` and ```prefers-color-scheme``` (here we still have a little work to do).
 - We care about semantic and will try present the code, examples in a more meaningful way.
