--- a/src/docs/getting-started/sass.mdx
+++ b/src/docs/getting-started/sass.mdx
@@ -6,13 +6,13 @@ title: 'Sass'
 
 ## Is Sass Needed to Use Spruce?
 
-Yes, it is. Spruce uses few utility classes. It uses [mixins](http://localhost:8000/docs/sass/mimxins), [functions](http://localhost:8000/docs/sass/functions), and [variables](http://localhost:8000/docs/sass/variables) (both Sass and CSS custom properties) to give a better development experience.
+Yes, it is. Spruce uses few utility classes. It uses [mixins](http://localhost:8000/docs/sass/mixins), [functions](http://localhost:8000/docs/sass/functions), and [variables](http://localhost:8000/docs/sass/variables) (both Sass and CSS custom properties) to give a better development experience.
 
 ## Why Use Sass?
 
 Well, for this question, there is a lot of reasonable answers. In this case, we like the idea of generating only as much code as we need. With this, Sass is a great help:
-using mixins and functions, we can create valuable helpers, as you can see under the mixin utilities.
-It is a framework (of some sort); it has to be expandable and modifiable.
+- using mixins and functions, we can create valuable helpers.
+- It is a framework (of some sort); it has to be expandable and modifiable.
 
 ## Dart Sass, @use and @forward
 
@@ -20,4 +20,4 @@ The spruce framework uses the newest Dart Sass. Sass is a tool with great suppor
 
 For example, the @import statement is now deprecated, and the [@use](https://sass-lang.com/documentation/at-rules/use), [@forward](https://sass-lang.com/documentation/at-rules/forward), takes its place.
 
-For more information about this change, please visit the official documentation. 
+For more information about this change, please visit the [official documentation](https://sass-lang.com/). 
