Update internationalization content

--- a/src/docs/getting-started/internationalization.mdx
+++ b/src/docs/getting-started/internationalization.mdx
@@ -2,16 +2,21 @@
 title: 'Internationalization'
 ---
 
-<p class="lead">Internationalization (i18n) means to prepare you code, design to handle different languages and writing modes.</p>
+<p class="lead">Internationalization (i18n) means preparing the code, design to handle different languages and writing modes.</p>
 
-The simplest example is the right-to-left (RTL) writing mode which used by Arabic, Hebrew languages among others. When you write RTL you should mirror (simplified explanation!) your site: your logo in the header move to the right side and all of your layout, text alignment also changes place in a similar manner.
+The simplest example is the right-to-left (RTL) writing mode used by Arabic and Hebrew languages, among others. When you write RTL, you should mirror (simplified) your site: your logo in the header moves to the right side, and all of your layout and text alignment also similarly change place.
 
-[Click on this button, to temporarly switch Spruce's site text directon to RTL.]
-
-For more information checkout this cool video from Moriel Chottlender hoseted by Jason Lengstorf:
+For more information, check out this excellent video from [Moriel Schottlender](https://twitter.com/mooeypoo) hosted by [Jason Lengstorf](https://www.jason.af/):
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OHF2h1_fBCM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-## Logical Properties
+## Logical Properties and Values
 
+CSS Logical Properties and Values is a newer CSS module to control the layout logically. Instead of physical left or right values, we have logical left or right, depending on the writing mode.
 
+Spruce uses these logical properties and values, but this is a new feature for us too.
+
+**For more information, please visit the following pages:**
+
+- [Basic concepts of Logical Properties and Values](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Logical_Properties/Basic_concepts)
+- [CSS Logical Properties and Values](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Logical_Properties)
