--- a/src/docs/getting-started/sass.mdx
+++ b/src/docs/getting-started/sass.mdx
@@ -6,7 +6,7 @@ title: 'Sass'
 
 ## Is Sass Needed to Use Spruce?
 
-Yes, it is. Spruce uses few utility classes. It uses [mixins](http://localhost:8000/docs/sass/mixins), [functions](http://localhost:8000/docs/sass/functions), and [variables](http://localhost:8000/docs/sass/variables) (both Sass and CSS custom properties) to give a better development experience.
+Yes, it is. Spruce uses few utility classes. It uses [mixins](/docs/sass/mixins), [functions](/docs/sass/functions), and [variables](/docs/sass/variables) (both Sass and CSS custom properties) to give a better development experience.
 
 ## Why Use Sass?
 
@@ -20,4 +20,4 @@ The spruce framework uses the newest Dart Sass. Sass is a tool with great suppor
 
 For example, the @import statement is now deprecated, and the [@use](https://sass-lang.com/documentation/at-rules/use), [@forward](https://sass-lang.com/documentation/at-rules/forward), takes its place.
 
-For more information about this change, please visit the [official documentation](https://sass-lang.com/). 
+For more information about this change, please visit the [official documentation](https://sass-lang.com/).
