--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -4,7 +4,7 @@ title: 'Functions'
 
 ## color
 
-Get color value by key and type name from the ```$colors``` map. The $colors map is nested, so you can access the color values by multiple levels, separated into groups.
+Get color value by key and type name from the ```$colors``` map. The ```$colors``` map is nested, so you can access the color values by multiple levels, separated into groups.
 
 The function returns a CSS custom property with a fallback color, but you can also access just the color value setting the ```$only-color``` value to ```true```.
 
@@ -28,5 +28,103 @@ a {
 
 .has-error {
   color: spruce.color(danger, alert);
+}
+```
+
+## font-size
+
+Get a value from the ```$font-sizes``` map by key name. By default, the function gives back a fluid font size using ```clamp()```, which amount you can control using the ```$scaler``` value.
+
+### Argument(s)
+
+| Name          | Default Value | Description                                                                  |
+|---------------|---------------|------------------------------------------------------------------------------|
+| ```$key```    |               | The name of the font-size (defaults: h1, h2, h3, h4, h5, h6).                |
+| ```$fluid```  | ```true```    | Whether you want fluid declaration or not.                                   |
+| ```$scaler``` | ```15```      | How much smaller font size do you want for the smaller screen in percentage. |
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_font-size.scss#L6)
+
+### Example(s)
+
+```scss
+.title {
+  font-size: spruce.font-size(h2);
+}
+
+.serial-number {
+  color: spruce.color(primary);
+  font-size: spruce.font-size(h3, $scaler: 30);
+}
+```
+
+## responsive-font-size
+
+It is hard to get generic font sizes that we can use throughout a whole project. Usually, we need unique ones. For this, we can set fluid declaration, similar to the ```font-size()``` function.
+
+### Argument(s)
+
+| Name          | Default Value | Description                                                                  |
+|---------------|---------------|------------------------------------------------------------------------------|
+| ```$size```   |               | The size of the font with a prefered unit.                                   |
+| ```$scaler``` | ```15```      | How much smaller font size do you want for the smaller screen in percentage. |
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_font-size.scss#L29)
+
+### Example(s)
+
+```scss
+.testimonial-title {
+  font-size: spruce.responsive-font-size(4rem, 30);
+}
+```
+
+## setting
+
+Get a value by key name from the ```$settings``` map.
+
+### Argument(s)
+
+| Name          | Description                                                                  |
+|---------------|------------------------------------------------------------------------------|
+| ```$key```    | The name of the setting.                                                     |
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_setting.scss#L5)
+
+### Example(s)
+
+```scss
+@if spruce.setting(hyphens) {
+  p,
+  li,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    hyphens: auto;
+    overflow-wrap: break-word;
+  }
+}
+```
+
+## spacer
+
+Get a value by key name from the ```$spacers``` map.
+
+### Argument(s)
+
+| Name          | Description                                                                  |
+|---------------|------------------------------------------------------------------------------|
+| ```$key```    | The name of the spacer.                                                      |
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_spacer.scss#L5)
+
+### Example(s)
+
+```scss
+.prism-code {
+  padding: spruce.spacer(xs) spruce.spacer(m);
 }
 ```
